finished login system

--- a/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/css/form.css
+++ b/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/css/form.css
@@ -1,7 +1,37 @@
-@charset "utf-8";
+mdc.textField.MDCTextField.attachTo(document.querySelector('.username'));mdc.textField.MDCTextField.attachTo(document.querySelector('.username'));.username,
+.password {
+  display: block;
+  width: 300px;
+  margin: 20px auto;
+}.username,
+.password {
+  display: block;
+  width: 300px;
+  margin: 20px auto;
+}.username,
+.password {
+  display: block;
+  width: 300px;
+  margin: 20px auto;
+}.username,
+.password {
+  display: block;
+  width: 300px;
+  margin: 20px auto;
+}.username,
+.password {
+  display: block;
+  width: 300px;
+  margin: 20px auto;
+}.username,
+.password {
+  display: block;
+  width: 300px;
+  margin: 20px auto;
+}@charset "utf-8";
 /* CSS Document */
 :root {
-	--mdc-theme-primary: #DB883D;
+	--mdc-theme-primary: #DB883D !important;
 	--mdc-theme--on-primary: #ffffff;
 	--mdc-theme-secondary: #000000;
 }
