--- a/app-code/com.barnsatble.fit/platforms/android/app/src/main/res/xml/config.xml
+++ b/app-code/com.barnsatble.fit/platforms/android/app/src/main/res/xml/config.xml
@@ -15,13 +15,14 @@
     <feature name="FileTransfer">
         <param name="android-package" value="org.apache.cordova.filetransfer.FileTransfer" />
     </feature>
-    <name>HelloCordova</name>
+    <name short="Barnstable Fitness Tracker">Barnstable Academy Fitness Tracker</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+        Allows Barnstable Academy students to track their steps and share that information with students and teachers
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <author email="edamato@octechservices.org" href="octechservices.org">
+        Enzo Damato
     </author>
+    <icon src="www/img/logo.png" />
     <content src="index.html" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
@@ -32,4 +33,5 @@
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
+    <preference name="android-minSdkVersion" value="21" />
 </widget>
