--- a/server-code/Teacher Panel/CSS/common.css
+++ b/server-code/Teacher Panel/CSS/common.css
@@ -3,3 +3,11 @@ Barnstable Academy Fitness Tracker Teacher control Panel
 Common CSS Library
 By: Enzo Damato
 */
+.mdc-top-app-bar {
+  position: absolute;
+  display: block;
+}
+body {
+  height: 100%;
+  width: 100%;
+}
