--- a/server-code/Teacher Panel/CSS/index.css
+++ b/server-code/Teacher Panel/CSS/index.css
@@ -1,12 +1,5 @@
-.textfeilds {
+.main-flex {
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.username,
-.password {
-  display: flex;
-  margin: 20px auto;
-  width: 300px;
+  height: 100vh;
+  width: 100vw;
 }
