--- a/server-code/Teacher Panel/CSS/index.css
+++ b/server-code/Teacher Panel/CSS/index.css
@@ -1,5 +1,26 @@
+body {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
 .main-flex {
   display: flex;
   height: 100vh;
   width: 100vw;
+}
+
+.title-flex {
+  display: flex;
+  align-items: center;
+  height: 5vh;
+  width: 100vw;
+  background-color: orange;
+}
+.title-text {
+  font-family: roboto, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: white;
+  font-size: 2vh;
+  margin-left: 3vw;
 }
